# lightdemo

./: .gitignore  CMakeLists.txt
asset/: quad.frag  quad.vert  rollfile  shadowcaster.frag  shadowcaster.vert
src/: lightdemo.h  main.cpp
src/entity/: entity.cpp  entity.h
src/render/: quad.cpp  render.h  renderer.cpp  shadow.cpp  shadowfill.h
win/src/: font.cpp  utility.cpp
